[package]
name = "plato-filter"
version = "0.1.0"
edition = "2021"
description = "Digital signal processing filters for PLATO tile streams"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
rand = "0.10.1"
serde_json = "1.0.150"
